--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: true
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
     - name: Pre-commit hooks
       run: |
         pre-commit run --all-files
